@@ -62,6 +62,9 @@ public class EmpRunnable implements Runnable {
       FileUtils.writeFile(outFile, command);
 
       CommandLine cmdl = new CommandLine("java");
+      String version = System.getProperty("java.version");
+      if (version.startsWith("1.8.0_2") || version.startsWith("9"))
+    	  cmdl.addArgument("--illegal-access=deny");
       cmdl.addArgument("-cp");
       cmdl.addArgument(classPath);
       cmdl.addArgument(className);
@@ -76,10 +79,13 @@ public class EmpRunnable implements Runnable {
       int exitValue = exec.execute(cmdl);
       assert (0 == exitValue);
 
+      
       String bitString = stderr.toString(); // TODO: can we make this all happen in binary?
+      bitString = bitString.substring(bitString.lastIndexOf("\n") + 1);
       outputString = bitString;
-      logger.fine("Output: " + bitString);
+      logger.info("Output: " + bitString);
       logger.info("Party " + party + " returned " + bitString.length() + " bits.");
+  
       // translate to bools
       output = stringToBool(bitString);
       logger.info("stdout: " + stdout.toString()); // uncomment to show cout statements
